--- a/source/widget/Mall.courseInfo/ui-course-info.less
+++ b/source/widget/Mall.courseInfo/ui-course-info.less
@@ -14,11 +14,92 @@
 		color: #e74c3c;
 	}
 	.f-left {
-		float: left;display: inline;
+		float: left;
+        display: inline;
 	}
 	.f-right {
-		float: right;display: inline;
+		float: right;
+        display: inline;
 	}
+    //多个头像左右切换样式
+        .ui_avatar_con {
+                float: left;
+                overflow: hidden;
+                //老师头像区域样式
+                .ui_avatar {
+                    float: left;
+                    display: inline;
+                    overflow: hidden;
+                    width: 120px;
+                    height: 40px;
+                    .avatar_items {
+                        overflow: hidden;
+                        width: 2000px;
+                        li {
+                            float: left;
+                            display: inline;
+                            width: 120px;
+                            a {
+                                float: left;
+                                display: block;
+                                width: 40px;
+                                height: 40px;
+                                overflow: hidden;
+                                border-radius: 50%;
+                                img {
+                                    width: 40px;
+                                    height: 40px;
+                                }
+                            }
+                            span {
+                                float: left;
+                                display: inline;
+                                line-height: 40px;
+                                margin-left: 5px;
+                            }
+                        }
+                    }
+                }
+                a {
+                    &.prev {
+                        float: left;
+                        display: inline;
+                        margin: 12px 10px 0 0;
+                    }
+                    &.next {
+                        float: left;
+                        display: inline;
+                        margin: 12px 0 0 10px;
+                    }
+                    em.icon {
+                        display: inline-block;
+                        height: 17px;
+                        line-height: 17px;
+                        text-align: center;
+                        text-indent: -9999em;
+                        vertical-align: top;
+                        width: 17px;
+                        &.icon-chevron-left {
+                            background: url('img/icon_chevron_left.png') no-repeat 0 0;
+                        }
+                        &.icon-chevron-right {
+                            background: url('img/icon_chevron_right.png') no-repeat 0 0;
+                        }
+                    }
+                    &.none {
+                        em.icon {
+                            &.icon-chevron-left {
+                                background: url('img/icon_chevron_left_none.png') no-repeat 0 0;
+                            }
+                            &.icon-chevron-right {
+                                background: url('img/icon_chevron_right_none.png') no-repeat 0 0;
+                            }
+                        }
+                    }
+                }
+            }
+    //多个头像左右切换样式
+
 	// 课程视频----左侧
 	.course-left-player {
 		overflow: hidden;
@@ -131,7 +212,7 @@
                &.collect_current {background: url(img/icon_star_gray.png) 0 2px no-repeat;cursor: default;}
             }
             .open-listen-num {
-            	width: 70px;font-size: 20px;color: #e74c3c;background: url(img/icon_eye.png) 0 10px no-repeat;padding-left: 20px;margin-top:10px;
+            	width: 70px;font-size: 18px;color: #e74c3c;background: url(img/icon_eye.png) 0 8px no-repeat;padding-left: 20px;margin-top:8px;
             }
 	   }
 	   //直播回放样式
@@ -142,105 +223,16 @@
 				span.f-left {
 					 width: 75px;font-size: 12px;line-height: 25px; padding-left: 10px;padding-top:10px;
 				}
-                   .ui_avatar_con {
-                       float: left;
-                        overflow: hidden;
-                       //老师头像区域样式
-                        .ui_avatar {
-                          float: left;
-                          display:inline;
-                          overflow: hidden;
-                          width: 120px;
-                            height: 40px;
-                         .avatar_items {
-                              overflow: hidden;
-                             width:2000px;
-                            li {
-                               float: left;
-                                display: inline;
-                                width: 120px;
-                                a {
-                                    float: left;
-                                    display: block;
-                                    width: 40px;
-                                    height: 40px;
-                                    overflow: hidden;
-                                    border-radius: 50%;
-                                    img {width: 40px;height: 40px;}
-                                }
-                                span {
-                                    float: left;
-                                    display: inline;
-                                    line-height: 40px;
-                                    margin-left:5px;
-                                }
-                            }
-                          }
-                        }
-                        //多个头像左右切换样式
-                        a {
-                            &.prev {
-                              float:left;
-                                display:inline;
-                                margin:12px 10px 0 0;
-                            }
-                            &.next {
-                              float:left;
-                                display:inline;
-                                margin:12px  0 0 10px;
-                            }
-                             em.icon {
-                                 display: inline-block;
-                                 height: 17px;
-                                 line-height: 17px;
-                                 text-align: center;
-                                 text-indent: -9999em;
-                                 vertical-align: top;
-                                 width: 17px;
-                                 &.icon-chevron-left {
-                                     background: url('img/icon_chevron_left.png') no-repeat 0 0;
-                                 }
-                                 &.icon-chevron-right {
-                                     background: url('img/icon_chevron_right.png') no-repeat 0 0;
-                                 }
-                             }
-                             &.none {
-                                 em.icon{
-                                      &.icon-chevron-left {
-                                         background: url('img/icon_chevron_left_none.png') no-repeat 0 0;
-                                     }
-                                     &.icon-chevron-right {
-                                         background: url('img/icon_chevron_right_none.png') no-repeat 0 0;
-                                     }
-                                 }
-                             }
-                         }
-                  //多个头像左右切换样式
-                         
-                }
-//				.main-teacher {
-//					overflow: hidden;
-//					.ui-avatar {
-//						width: 40px;height: 40px;overflow: hidden;border-radius: 50%;
-//						img {width: 40px;height: 40px;}
-//					}
-//					.teacher-avatar-infor {
-//						width: 240px;
-//						p{
-//							height: 20px;line-height: 20px;font-size: 14px;font-weight: normal;margin:10px 0 5px 10px;
-//							span {display: inline-block;padding-left:10px;}
-//						}
-//					}
-//				}
+                  
 			}
 			//免费课样式
 			.open-course-list {
-				height: 240px;background: #fcfcfc;margin-bottom: 20px;overflow: hidden;padding-left: 10px;
+				height: 280px;background: #fcfcfc;margin-bottom: 20px;overflow: hidden;padding-left: 10px;
 				.open-course-title {
 					height: 40px;line-height: 40px;font-size: 12px;padding-top: 10px;
 				}
 				#open-outline {
-					height: 200px;overflow: auto;
+					height: 240px;overflow: auto;
 					.coures-label-info {
 						height: 50px;line-height: 50px;font-size: 14px;
 						span {
@@ -264,20 +256,13 @@
 				}
 			}
 			.open-course-button {
-				.main-teacher {
-					width:330px;overflow: hidden;
-					.ui-avatar {
-						width: 60px;height: 60px;overflow: hidden;border-radius: 50%;
-						img {width: 60px;height: 60px;}
-					}
-					.teacher-avatar-infor {
-						width: 240px;
-						p{
-							height: 20px;line-height: 20px;font-size: 14px;font-weight: normal;margin:5px 0 5px 10px;
-							span {display: inline-block;padding-left:10px;}
-						}
-					}
-				}
+                span.c-teacher {
+                        width: 75px;
+                        font-size: 12px;
+                        line-height: 25px;
+                        padding-left: 10px;
+                        padding-top: 10px;
+                }
 			}	
 	   }
 	}
@@ -307,9 +292,6 @@
 					}
 				}
 			}
-//			.teacher-infor {
-//				line-height:180%;font-size: 12px;color: #666;overflow: hidden;margin-top: 10px;
-//			}
 			&.noBorder {
 						border:none;
 					}
