--- a/source/widget/Mall.personCenter/personalCenter.less
+++ b/source/widget/Mall.personCenter/personalCenter.less
@@ -39,7 +39,7 @@
       //width: 1190px;
       height: 300px;
       margin: 0 auto;
-      background-color: rgba(0,0,0,0.05);
+      background: url(img/headerBack.png) no-repeat;
     }
         .centerHeader-img{
           padding-top: 60px;
@@ -611,12 +611,28 @@
          -o-border-radius: @radius;
             border-radius: @radius;
 }
+.focusGuyTab{
+    .all-fresh-list{
+        border-radius:4px;
+    }
+    .fresh-list{
+        &:first-child{
+            border-top-left-radius:4px; 
+            border-top-right-radius:4px;
+        }
+        &:last-child{
+            border-bottom-left-radius:4px;
+            border-bottom-right-radius:4px;
+        }
+    }
+}
 .filter-public-tab{
    display: block;
    overflow: hidden;
    background: #fff;
    line-height: 30px;
    padding: 12px 15px;
+    margin-bottom: 1px;
    .font-size;
    .font-family;
    color:@font-color;
