未登录请求ajax跳回登陆页

--- a/source/widget/UM.head.photo/head.photo.less
+++ b/source/widget/UM.head.photo/head.photo.less
@@ -112,6 +112,8 @@
                            top: -50%;
                            left: auto !important;
                            left: -50%;
+                           max-width: 400px;
+                           max-height: 340px;
                            filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(sizingMethod=image);
                         }
                     }
@@ -211,6 +213,9 @@
         p{
             font-size: 12px;
             color: #666;
+        }
+        #img-small,#img-middle,#img-big{
+           filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(sizingMethod=image); 
         }
         #hp-small,#hp-middle,#hp-big{
             text-align: center;
