--- a/source/widget/UserHome.gold/gold.less
+++ b/source/widget/UserHome.gold/gold.less
@@ -33,7 +33,7 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .gold-store-card-box,.gold-store-present-box,.gold-exchange-card-box,.gold-exchange-present-box{overflow: hidden;width: 934px;position: absolute;left: 140px;margin-top: 12px;}
 .gold-exchange-card-box p{height: 18px;width: 1px;background-color: #eaeaea;display: inline-block;margin-left: 21px;margin-bottom: 0;vertical-align: middle;}
 .gold-store-card-box-over,.gold-store-present-card-box,.gold-exchange-present-card-box{width: 936px;overflow: hidden;}
-.gold-store-card,.gold-store-present-card,.gold-exchange-present-card{width: 217px;height: 344px;background-color: #fff;border-radius: 5px;overflow: hidden;float: left;margin: 10px 7px 0 5px;}
+.gold-store-card,.gold-store-present-card,.gold-exchange-present-card{width: 217px;height: 344px;background-color: #fff;border-radius: 5px;overflow: hidden;float: left;margin: 10px 7px 3px;}
 .gold-store-card-img-box,.gold-store-present-img-box,.gold-exchange-present-img-box{height: 164px;line-height: 164px;text-align: center;}
 .gold-store-card-price-box{width: 200px;font-size: 12px;color: #999;margin: 0 auto;overflow: hidden;}
 .gold-store-card-price{float: left;}
