--- a/source/widget/UserHome.gold/gold.less
+++ b/source/widget/UserHome.gold/gold.less
@@ -54,7 +54,7 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .gold-store-present-card-center{text-align: center;font-size: 14px;}
 .gold-store-present-card-name{color: #333;display: block;margin: 20px 0 5px;}
 .gold-exchange-present-card-name{color: #999;display: block;margin-top: 17px;line-height: 1;}
-.gold-exchange-present-card-name span{color:#333;margin-left: 10px;}
+.gold-exchange-present-card-name span{color:#333;}
 .gold-store-present-card-stock{color: #999999;display: block;}
 .gold-store-present-card-gold{font-size: 16px;color: #e74c3c;display: block;margin: 25px 0;}
 .gold-exchange-show-container{margin-top:1px;border-radius: 5px;overflow: hidden;}
