分页 防止密码重复提交

--- a/source/widget/UM.none/none.less
+++ b/source/widget/UM.none/none.less
@@ -4,13 +4,14 @@
         float: left;
         position: relative;
         left: 50%;
-        top: 30px;
         .nc-center{
             position: relative;
             left: -50%;
             img{
                 _float: left;
                 _margin-right: 240px;
+                width: 100px;
+                height: 100px;
             }
             p{
                 float: right;
