--- a/source/widget/UM.password/password.less
+++ b/source/widget/UM.password/password.less
@@ -10,6 +10,20 @@
         color: #666;
         text-align: right;
     }
+    .password-error{
+        display: none;
+        position: absolute;
+        top: -40px;
+        width: 325px;
+        border: 1px solid #e74c3c; 
+        background-color: #fef6f5;
+        span{
+            display: inline-block;
+            padding: 6px 0 6px 30px;
+            color: #e74c3c;
+            background: url("img/warning.png") 5px 4px no-repeat;
+        }
+    }
     .error-box{
         display: block;  
         width: 210px;
