修改头部菜单右边区域内容少的时候靠右对齐，

--- a/source/widget/Public.Topbar/topbar.less
+++ b/source/widget/Public.Topbar/topbar.less
@@ -66,6 +66,7 @@
         margin-bottom: 0;
         padding: 0;
         background-color: transparent;
+        text-align: right;
         li {
             height: 30px;
         }
@@ -74,6 +75,7 @@
         }
         .dropdown-body {
             margin-left: 6px;
+            text-align: left;
         }
         .hover {
             &:before {
