--- a/source/widget/Public.Topbar/topbar.css
+++ b/source/widget/Public.Topbar/topbar.css
@@ -64,6 +64,7 @@
   margin-bottom: 0;
   padding: 0;
   background-color: transparent;
+  text-align: right;
 }
 #module-topbar .breadcrumb li {
   height: 30px;
@@ -73,6 +74,7 @@
 }
 #module-topbar .breadcrumb .dropdown-body {
   margin-left: 6px;
+  text-align: left;
 }
 #module-topbar .breadcrumb .hover:before {
   padding-right: 9px;
