--- a/source/widget/UM.head.photo/head.photo.less
+++ b/source/widget/UM.head.photo/head.photo.less
@@ -77,6 +77,9 @@
                     background: url("img/warning.png") 5px 4px no-repeat;
                 }
             }
+            .img-success{
+                display: none;
+            }
             .hl-box{
                 position: relative;
                 width: 400px;
