--- a/source/widget/Public.Nav/nav.less
+++ b/source/widget/Public.Nav/nav.less
@@ -109,7 +109,7 @@
         background-color: rgba(30, 137, 224, .9);
         .category-item {
             height: 75px;
-            padding: 18px 10px 18px 20px;
+            padding: 18px 10px 18px 10px;
             border-bottom: 1px solid rgba(255, 255, 255, .2);
             h3 {
                 margin: 0;
@@ -119,6 +119,7 @@
             p {
                 margin: 0;
                 line-height: 30px;
+                font-size: 12px;
                 a {
                     color: #FFF;
                     padding: 0;
