--- a/source/widget/UserHome.gold/gold-address.less
+++ b/source/widget/UserHome.gold/gold-address.less
@@ -1,29 +1,58 @@
-.info_from {
-				overflow: hidden;padding:20px 20px 0;display: none;
-				p {
-					overflow: hidden;
-					label {float:left;display: inline;width: 70px;line-height:30px;margin-bottom: 10px;color: #666;}
-					input {float:left;display: inline;width: 260px;height: 36px;border:1px solid #d2d2d2;padding:5px;}
-					.input_360 {width: 360px;}
-					span {
-						width: inherit;
-						font-size: 12px;
-						float: left;display: inline; color: #999;margin-right: 5px;
-						&.text {line-height: 35px;}
-					}
-					.select {
-						display: inline;margin-right: 10px;height: 36px;border:1px solid #d2d2d2;
-					}
-					.btn {width:172px;color:#FFF;height:35px;text-decoration: none;font-size: 16px;background: #3bafda;}
-					.error_tips_address {
-						float:none; padding-left:10px; color:#cc0000;
-						display:inline-block;
-					}
-					.error {
-						border:1px solid #c00;
-					}
-					&.error_tips_address {
-						color: #cc0000;
-					}
-				}
-			}
+.info_from_p {
+	overflow: hidden;
+}
+.info_from_label {
+	float: left;
+	display: inline;
+	width: 70px;
+	line-height: 30px;
+	margin-bottom: 10px;
+	color: #666;
+}
+.info_from_p input {
+	float: left;
+	display: inline;
+	width: 260px;
+	height: 36px;
+	border: 1px solid #d2d2d2;
+	padding: 5px;
+}
+.info_from_p .input_360 {
+	width: 360px;
+}
+.info_from_p span {
+	width: inherit;
+	font-size: 12px;
+	display: inline;
+	color: #999;
+	margin-right: 5px;
+}
+.info_from_p span.text {
+	line-height: 35px;
+}
+.info_from_p .select {
+	display: inline;
+	margin-right: 10px;
+	height: 36px;
+	border: 1px solid #d2d2d2;
+}
+.info_from_p .btn {
+	width: 172px;
+	color: #FFF;
+	height: 35px;
+	text-decoration: none;
+	font-size: 16px;
+	background: #3bafda;
+}
+.info_from_p .error_tips_address {
+	float: none;
+	padding-left: 10px;
+	color: #cc0000;
+	display: inline-block;
+}
+.info_from_p .error {
+	border: 1px solid #c00;
+}
+.info_from_p.error_tips_address {
+	color: #cc0000;
+}
