--- a/source/widget/UserHome.gold/gold.less
+++ b/source/widget/UserHome.gold/gold.less
@@ -1,6 +1,7 @@
 ul,li{list-style: none;margin: 0;}
 em{font-style: normal;}
 table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
+.none-tip{margin-top: 100px;text-align: center;}
 /* 金币明细 */
 .gold-detail-title{padding:0;margin: 0;overflow: hidden;font-size: 14px;border-bottom: 1px solid #3bafda;}
 .gold-detail-title a{float: left;width: 91px;text-decoration: none;text-align: center;line-height: 30px;cursor: pointer;}
@@ -31,7 +32,7 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .gold-store-title-on,.gold-exchange-title-on{background-color: #3bafda;color: #fff;}
 .gold-store-container,.gold-exchange-container{position: relative;}
 .gold-store-card-box,.gold-store-present-box,.gold-exchange-card-box,.gold-exchange-present-box{overflow: hidden;width: 934px;position: absolute;left: 140px;margin-top: 12px;}
-.gold-exchange-card-box p{height: 18px;width: 1px;background-color: #eaeaea;display: inline-block;margin-left: 21px;margin-bottom: 0;vertical-align: middle;}
+.gold-exchange-card-box-p{height: 18px;width: 1px;background-color: #eaeaea;display: inline-block;margin-left: 21px;margin-bottom: 0;vertical-align: middle;}
 .gold-store-card-box-over,.gold-store-present-card-box,.gold-exchange-present-card-box{width: 936px;overflow: hidden;}
 .gold-store-card,.gold-store-present-card,.gold-exchange-present-card{position: relative;width: 217px;height: 344px;background-color: #fff;border-radius: 5px;overflow: hidden;float: left;margin: 10px 7px 3px;}
 .gold-store-card-img-box,.gold-store-present-img-box,.gold-exchange-present-img-box{height: 164px;line-height: 164px;text-align: center;}
