收藏页增加取消收藏功能

--- a/source/widget/Public.Module/courses.less
+++ b/source/widget/Public.Module/courses.less
@@ -283,7 +283,7 @@ ul,li{list-style: none;}
 	.cancel-courseList{
 		float: right;
 		font-size: 12px;
-		padding-top: 14px;
+		padding-right: 14px;
 		a{
 			color: #3bafda;
 		}
@@ -293,6 +293,12 @@ ul,li{list-style: none;}
 			i{
 				font-style: normal;
 			}
+		}
+	}
+	.cancel-courseList-disabled{
+		a{
+			color: #999;
+			cursor: default;
 		}
 	}
 	.course-num{
