Signed-off-by: Ge-yuan-jun <daydaygyj@gmail.com>

--- a/source/widget/UserHome.header/homeHeader.less
+++ b/source/widget/UserHome.header/homeHeader.less
@@ -61,15 +61,27 @@ body {
         line-height: 60px;
     }
 }
+
+
 /* 勋章页卡 */
+
 .pop_student_medal {
+    //border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #fff;
     font-size: 12px;
-    width: 320px;
+    width: 324px;
     overflow: hidden;
     margin: 10px auto;
-    padding: 0 10px;
+    padding: 10px 10px;
 }
-
+div.dialog_arrow.arrow_tl {
+    width: 15px;
+    background-image: url("http://img04.xesimg.com/dialog/dialog_arrow_t.png");
+    position: absolute;
+    height: 10px;
+    z-index:100;
+}
 .pop_student_medal .student_medal_con {
     overflow: hidden;
     height: 75px;
