--- a/source/widget/UserHome.header/homeHeader.less
+++ b/source/widget/UserHome.header/homeHeader.less
@@ -106,6 +106,11 @@ div.dialog_arrow.arrow_tl {
     color: #333;
 }
 
+.pop_student_medal .student_medal_con .medal_con strong{
+    color:#cc0000;
+    font-weight:normal;
+}
+
 .pop_student_medal .student_medal_con .medal_con p.name {
     height: 25px;
     font-size: 16px;
