--- a/source/widget/UserHome.header/homeHeader.less
+++ b/source/widget/UserHome.header/homeHeader.less
@@ -2,12 +2,13 @@
 body {
     background-color: rgb(241, 242, 246);
 }
+
 #module-myheader {
     padding: 10px 0;
     background-color: #3bafda;
-//    .container {
-//        width: 1050px;
-//    }
+    //    .container {
+    //        width: 1050px;
+    //    }
     .user-avatar {
         margin-right: 10px;
     }
@@ -59,4 +60,142 @@ body {
         vertical-align: middle;
         line-height: 60px;
     }
+}
+
+
+/* 勋章页卡 */
+
+.pop_student_medal {
+    //border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #fff;
+    font-size: 12px;
+    width: 324px;
+    overflow: hidden;
+    margin: 10px auto;
+    padding: 10px 10px;
+}
+div.dialog_arrow.arrow_tl {
+    width: 15px;
+    background-image: url("http://img04.xesimg.com/dialog/dialog_arrow_t.png");
+    position: absolute;
+    height: 10px;
+    z-index:100;
+}
+.pop_student_medal .student_medal_con {
+    overflow: hidden;
+    height: 75px;
+}
+
+.pop_student_medal .student_medal_con .ui_medal_pic {
+    float: left;
+    display: inline;
+    width: 75px;
+    margin-right: 10px;
+}
+
+.pop_student_medal .student_medal_con .ui_medal_pic img {
+    width: 75px;
+    height: 75px;
+}
+
+.pop_student_medal .student_medal_con .medal_con {
+    float: left;
+    display: inline;
+    width: 215px;
+    color: #333;
+}
+
+.pop_student_medal .student_medal_con .medal_con strong{
+    color:#cc0000;
+    font-weight:normal;
+}
+
+.pop_student_medal .student_medal_con .medal_con p.name {
+    height: 25px;
+    font-size: 16px;
+    font-family: 'Microsoft YaHei';
+}
+
+.pop_student_medal .student_medal_con .medal_con p.info {
+    line-height: 160%;
+}
+
+.pop_student_medal .medal_info {
+    width: 100%;
+    overflow: hidden;
+    margin-top: 10px;
+}
+
+.pop_student_medal .medal_info span {
+    float: left;
+    width: 100%;
+    height: 20px;
+    line-height: 20px;
+    background: #fef3d5;
+    color: #cc0000;
+    padding-left: 5px;
+}
+
+.pop_student_medal .medal_info span.green {
+    background: #ecf9d2;
+    color: #609b13;
+}
+
+.pop_student_medal .meadl_live {
+    height: 30px;
+    line-height: 30px;
+    color: #999;
+}
+
+.pop_student_medal .medal_upgrade {
+    height: 30px;
+    overflow: hidden;
+    background: url('http://img04.xesimg.com/icon/bar_bg.png') 55px 20px no-repeat;
+    position: relative;
+    margin-bottom: 5px;
+}
+
+.pop_student_medal .medal_upgrade span {
+    float: left;
+    display: inline;
+}
+
+.pop_student_medal .medal_upgrade .upgrade {
+    width: 40px;
+    background: url('http://img04.xesimg.com/icon/up_icon.png') no-repeat;
+    padding-left: 15px;
+    margin-top: 15px;
+}
+
+.pop_student_medal .medal_upgrade .upgrade_number {
+    float: right;
+    margin-right: 10px;
+    color: #999;
+}
+
+.pop_student_medal .medal_upgrade .upgrade_bar {
+    width: 236px;
+    height: 9px;
+    overflow: hidden;
+    position: absolute;
+    left: 55px;
+    top: 20px;
+    z-index: 10;
+}
+
+.pop_student_medal .medal_upgrade .upgrade_bar span {
+    width: 236px;
+    height: 9px;
+    background: url('http://img04.xesimg.com/icon/bar_cur.png') no-repeat;
+}
+
+.pop_student_medal .all_upgrade {
+    line-height: 25px;
+    color: #ec8000;
+}
+
+.pop_student_medal .all_upgrade_info {
+    height: 20px;
+    color: #cc0000;
 }
