--- a/source/widget/UserHome.notice/notice.less
+++ b/source/widget/UserHome.notice/notice.less
@@ -46,7 +46,7 @@
                  word-break:
                  break-all;
                  p{
-                     height:95px;
+                     min-height: 80px;
                      color: #333;
                      line-height: 32px;
                      margin-bottom: 10px;
