--- a/source/widget/UserHome.gold/gold.less
+++ b/source/widget/UserHome.gold/gold.less
@@ -38,7 +38,7 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .gold-store-card-img-box,.gold-store-present-img-box,.gold-exchange-present-img-box{height: 164px;line-height: 164px;text-align: center;}
 .gold-store-card-price-box{width: 200px;font-size: 12px;color: #999;margin: 0 auto;overflow: hidden;}
 .gold-store-card-price{float: left;}
-.gold-store-card-price em{margin-left: 10px;font-size: 16px;color: #e74c3c;}
+.gold-store-card-price em{margin-left: 10px;font-size: 16px;color: #e74c3c;font-weight: bold;}
 .gold-store-card-level{float: right;height: 24px;line-height: 26px;}
 .gold-store-card-level em{margin-left: 10px;font-weight: bold;color: #333;}
 .gold-store-card p{width: 200px;font-size: 12px;color: #333;margin: 12px auto;line-height: 18px;}
@@ -78,7 +78,7 @@ table tr th, table tr td{font-size: 12px;padding: 0;text-align: center;}
 .red-card-name,.present-name{display: block;font-size: 16px;margin: 10px 0;}
 .red-card-intro-name,.present-intro-name{font-size: 12px;margin: 18px 0;}
 .red-card-intro-name span,.present-intro-name span{vertical-align: bottom;line-height: 18px;}
-.red-card-intro-name span em,.present-intro-name span em{color: #e74c3c;}
+.red-card-intro-name span em,.present-intro-name span em{color: #e74c3c;font-weight: bold;}
 .red-card-intro-title,.present-intro-title{color: #999;float: left;}
 .red-card-intro-title span,.present-intro-title span{margin-left: 12px;}
 .red-card-dec,.present-dec{display: inline-block;margin-right: 10px;vertical-align: middle;width: 16px;height: 16px;background-color: #b5b5b5;border-radius: 18px;position: relative;cursor: pointer;}
