--- a/source/widget/UserHome.notice/notice.less
+++ b/source/widget/UserHome.notice/notice.less
@@ -75,4 +75,32 @@
             min-height: 40px;
             border-bottom: none;
         }
+        .none-content{
+            float: left;
+            position: relative;
+            left: 50%;
+            .nc-center{
+                position: relative;
+                left: -50%;
+                img{
+                    _float: left;
+                    _margin-right: 240px;
+                    width: 100px;
+                    height: 100px;
+                }
+                p{
+                    float: right;
+                    _float: none;
+                    _width: 120px;
+                    margin: 30px 0 0 20px;
+                    line-height: 35px;
+                    font-family: "Microsoft YaHei";
+                    font-size: 16px;
+                    em{
+                        font-style: normal;
+                        color: #e74c3c;
+                    }
+                }
+            }
+        }
 }
