--- a/source/widget/UM.certificate.binding/certificate.binding.less
+++ b/source/widget/UM.certificate.binding/certificate.binding.less
@@ -61,7 +61,6 @@
         left: 7px;
     }
     .cb-prompt-box{
-        height: 80px;
         background: #fff8eb;
         border-radius: 5px;
         padding: 10px 0 0 20px;
@@ -72,7 +71,7 @@
             margin: 6px 0 6px 5px;
         }
         p{
-            margin: 0 0 0 5px;
+            padding: 0 5px 15px 5px;
             strong{
                 font-family: "Microsoft YaHei";
                 font-size: 16px;
