--- a/source/widget/UserHome.courses/courseStudycenter.less
+++ b/source/widget/UserHome.courses/courseStudycenter.less
@@ -792,6 +792,32 @@ table tr.even, table tr.alt, table tr:nth-of-type(2n){
 		}
 	}
 }
+.none-content{
+	float: left;
+	position: relative;
+	left: 50%;
+	.nc-center{
+		position: relative;
+		left: -50%;
+		img{
+			_float: left;
+			_margin-right: 240px;
+		}
+		p{
+			float: right;
+			_float: none;
+			_width: 120px;
+			margin: 30px 0 0 20px;
+			line-height: 35px;
+			font-family: "Microsoft YaHei";
+			font-size: 16px;
+			em{
+				font-style: normal;
+				color: #e74c3c;
+			}
+		}
+	}
+}
 // 进度条
 .processingbar {
 	text-align: center;
