--- a/source/widget/Public.Module/glory.less
+++ b/source/widget/Public.Module/glory.less
@@ -1,4 +1,33 @@
 @borderColor: #eaeaea;
+#glory_logo {
+	background: url("/static/img/login_bg.jpg") repeat-x scroll 0 0;
+	height: 56px;
+	margin: 0 auto;
+	.logo_center {
+		margin: 0 auto;
+		padding-top: 12px;
+		width: 1190px;
+		.logo_passport {
+			background: rgba(0, 0, 0, 0) url("/static/img/logo_new.png") no-repeat scroll 0 0;
+			border-right: 1px solid #d9d9d9;
+			float: left;
+			height: 25px;
+			margin-right: 18px;
+			padding-right: 18px;
+			width: 194px;
+		}
+		.logo_tips {
+			color: #333;
+			float: left;
+			font-family: "微软雅黑";
+			font-size: 20px;
+			font-weight: normal;
+			height: 32px;
+			letter-spacing: 2px;
+			width: 190px;
+		}
+	} 
+}
 .glory-grades-wrap{
 	width: 1190px;
 	margin:0 auto;
