--- a/source/widget/Public.MiniCart/minicart.less
+++ b/source/widget/Public.MiniCart/minicart.less
@@ -45,6 +45,7 @@
             background-color: #e74c3c;
             font-weight: 400;
             top: -1em;
+            padding:4px 7px;
         }
     }
     .dropdown-body {
@@ -123,6 +124,16 @@
                         }
                         .delete {
                             display: block;
+                        }
+                    }
+                    &.course-info {
+                        color: #999;
+                        .course-info {
+                        .course-title {
+                                a {
+                                    color: #999; 
+                                }
+                            }
                         }
                     }
                 }
