--- a/source/widget/UM.none/none.less
+++ b/source/widget/UM.none/none.less
@@ -7,17 +7,16 @@
         .nc-center{
             position: relative;
             left: -50%;
+            text-align: center;
+            margin-top: 25px;
             img{
                 _float: left;
                 _margin-right: 240px;
-                width: 100px;
-                height: 100px;
             }
             p{
-                float: right;
                 _float: none;
                 _width: 120px;
-                margin: 30px 0 0 20px;
+                margin-top: 20px;
                 line-height: 35px;
                 font-family: "Microsoft YaHei";
                 font-size: 16px;
