--- a/source/widget/UserHome.notice/notice.less
+++ b/source/widget/UserHome.notice/notice.less
@@ -1,5 +1,6 @@
 .notice-warp{
     margin: 0 auto;
+    min-height: 598px;
     #notice-nm{
         display: block;
         width: 176px;
@@ -15,7 +16,8 @@
     }
     .notice-message{
         height:auto;
-        padding:10px 20px 25px 15px;
+        padding: 0 20px 15px 15px;
+        margin-bottom: 20px;
         border-bottom: 1px solid #eaeaea;
         overflow: hidden;
         .notice-user{
@@ -65,10 +67,6 @@
              }
         }
     }
-    .nm-paging{
-        min-height: 40px;
-        border-bottom: none;
-    }
 }
 .none-content{
     float: left;
@@ -77,17 +75,16 @@
     .nc-center{
         position: relative;
         left: -50%;
+        text-align: center;
+        margin-top: 25px;
         img{
             _float: left;
             _margin-right: 240px;
-            width: 100px;
-            height: 100px;
         }
         p{
-            float: right;
             _float: none;
             _width: 120px;
-            margin: 30px 0 0 20px;
+            margin-top: 20px;
             line-height: 35px;
             font-family: "Microsoft YaHei";
             font-size: 16px;
