--- a/source/widget/UM.none/none.less
+++ b/source/widget/UM.none/none.less
@@ -10,6 +10,8 @@
             text-align: center;
             margin-top: 25px;
             img{
+                height: 100px;
+                width: 100px;
                 _float: left;
                 _margin-right: 240px;
             }
