--- a/source/widget/Public.Module/glory.less
+++ b/source/widget/Public.Module/glory.less
@@ -28,6 +28,33 @@
 		}
 	} 
 }
+.none-content{
+    float: left;
+    position: relative;
+    left: 50%;
+    .nc-center{
+        position: relative;
+        left: -50%;
+        text-align: center;
+        margin-top: 25px;
+        img{
+            _float: left;
+            _margin-right: 240px;
+        }
+        p{
+            _float: none;
+            _width: 120px;
+            margin-top: 20px;
+            line-height: 35px;
+            font-family: "Microsoft YaHei";
+            font-size: 16px;
+            em{
+                font-style: normal;
+                color: #e74c3c;
+            }
+        }
+    }
+}
 .glory-grades-wrap{
 	width: 1190px;
 	margin:0 auto;
